languages/montiarc-fe/src/test/resources/contextconditions/valid/ParameterNamesUnique.arc
package valid;

component ParameterNamesUnique(String a, String b) {
}