languages/montiarc-fe/src/test/resources/contextconditions/invalid/ParameterNamesNotUnique.arc
package invalid;

component ParameterNamesNotUnique(String a, String a) {
}